[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "eventdispatch"
version = 0.1.11
authors = [{name = "Charlie Yan", email = "cyanatg@gmail.com"}]
dynamic = ["version", "description", "scripts", "dependencies", "license"]
description = "Event Dispatch: a discrete time synchronizer"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Linux",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/cyan-at/eventdispatch"
Issues = "https://github.com/cyan-at/eventdispatch/issues"