<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eventdispatch_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 wrapper for python3-eventdispatch</description>
  <maintainer email="cyanatg@gmail.com">Charlie Yan</maintainer>
  <license>Apache 2.0</license>

  <depend>python3-eventdispatch</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
